--- a/_config.yml
+++ b/_config.yml
@@ -2,17 +2,20 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Your Name
-email: you@example.com
+title: anthrologue
+email: anthrologue@gmail.com
 description: > # this means to ignore newlines until "url:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
-  Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
+# powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>
+#  with a modified <a
+#  href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+#  hosted by <a href="https://pages.github.com/"
+#  target="_blank">GitHub Pages</a>.  photos taken by members of
+#  anthrologue
 
-url:  # the base hostname & protocol for your site
-baseurl: /al-folio # the subpath of your site, e.g. /blog/
+url: # the base hostname & protocol for your site
+baseurl: # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 
 # -----------------------------------------------------------------------------
@@ -37,7 +40,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # -----------------------------------------------------------------------------
 
 github_username: # your GitHub user name
-twitter_username: # your Twitter handle
+twitter_username: anthrologue # your Twitter handle
 linkedin_username: # your LinkedIn user name
 scholar_userid: # your Google Scholar ID
 orcid_id: # your ORCID ID
@@ -48,7 +51,7 @@ research_gate_profile: # your profile on ResearchGate
 blogger_url: # your blogger URL
 
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  follow us to stay up to date!
 
 google_analytics: UA-XXXXXXXXX # out your google-analytics code
 
@@ -56,7 +59,7 @@ google_analytics: UA-XXXXXXXXX # out your google-analytics code
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio  # your blog must have a name for it to show up in the nav bar
+blog_name:  # your blog must have a name for it to show up in the nav bar
 blog_description: a simple whitespace theme for academics
 permalink: /blog/:year/:title/
 
@@ -77,9 +80,15 @@ collections:
       layout: post
     output: true
     permalink: /news/:path/
-  projects:
+  projects:   
     output: true
     permalink: /projects/:path/
+  members:   
+    output: true
+    permalink: /people/:path/
+  people:	
+    output: false
+    permalink: /people/:path/
 
 news_limit: 5
 
@@ -113,6 +122,7 @@ plugins:
   - jemoji
   # - bootstrap
   # - material-sass
+  - jekyll-gist
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
@@ -120,7 +130,7 @@ plugins:
 
 scholar:
 
-  last_name: Einstein
+  last_name: Fortunato, Kenny # add more
 
   style: apa
   locale: en
