--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,8 +1,17 @@
-Adams:
-    url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
+Fortunato:
+    url: https://orcid.org/0000-0002-8116-6250
 
-Podolsky:
-    url: https://en.wikipedia.org/wiki/Boris_Podolsky
+Kenny:
+    url: https://orcid.org/0000-0001-9306-3091
 
-Rosen:
-    url: https://en.wikipedia.org/wiki/Nathan_Rosen
+de Vries:
+    url: https://orcid.org/0000-0002-4772-4298
+
+Pit:
+    url: https://orcid.org/0000-0002-4066-8086
+
+Ihle:
+    url: https://orcid.org/0000-0002-3242-5981
+
+Arini:
+    url: 
